--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-	"name": "@sindresorhus/slugify",
+	"name": "@cvpcasada/slugify",
 	"version": "0.3.0",
 	"description": "Slugify a string",
 	"license": "MIT",
 	"repository": "sindresorhus/slugify",
+	"main": "dist/index.js",
 	"author": {
 		"name": "Sindre Sorhus",
 		"email": "sindresorhus@gmail.com",
@@ -13,10 +14,11 @@
 		"node": ">=6"
 	},
 	"scripts": {
+		"build": "rollup -c",
 		"test": "xo && ava"
 	},
 	"files": [
-		"index.js"
+		"dist"
 	],
 	"keywords": [
 		"string",
@@ -38,11 +40,20 @@
 		"id"
 	],
 	"dependencies": {
-		"escape-string-regexp": "^1.0.5",
-		"lodash.deburr": "^4.1.0"
+		"babel-runtime": "^6.26.0",
+		"lodash": "^4.17.10"
 	},
 	"devDependencies": {
 		"ava": "*",
+		"babel-core": "^6.26.3",
+		"babel-preset-env": "^1.7.0",
+		"babel-plugin-lodash": "^3.3.4",
+		"babel-plugin-transform-runtime": "^6.23.0",
+		"escape-string-regexp": "^1.0.5",
+		"rollup": "^0.63.4",
+		"rollup-plugin-babel": "^3.0.7",
+		"rollup-plugin-commonjs": "^9.1.4",
+		"rollup-plugin-node-resolve": "^3.3.0",
 		"xo": "*"
 	}
 }
